--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-svg": "^15.15.0",
+    "react-native-svg-transformer": "^1.5.2",
     "react-native-web": "^0.21.0",
     "zustand": "^5.0.8"
   },
