--- a/package.json
+++ b/package.json
@@ -9,21 +9,9 @@
     "web": "expo start --web",
     "tunnel": "npx expo start --dev-client --tunnel",
     "update-ios": "eas update --branch production",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
-    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
-    "type-check": "tsc --noEmit",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js,jsx}": [
-      "eslint --fix",
-      "git add"
-    ]
-
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
-
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
@@ -43,11 +31,12 @@
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
     "lucide-react-native": "^0.553.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-ble-plx": "^3.5.0",
     "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.6",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
@@ -57,16 +46,6 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-
-    "@react-native/eslint-config": "^0.76.0",
-    "@types/react": "~19.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
-    "eslint-plugin-react": "^7.33.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.0.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
