--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
           "isBackgroundEnabled": true,
           "modes": [
             "peripheral",
+            
             "central"
           ],
           "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
@@ -63,7 +64,10 @@
       "policy": "appVersion"
     },
     "extra": {
-      "router": {}
+      "router": {},
+      "eas": {
+        "projectId": "dc9a6fec-0dfd-4d41-91c6-cd2a614584db"
+      }
     }
   }
 }
