--- a/app.json
+++ b/app.json
@@ -56,14 +56,14 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "owner": "andrii-00",
+    "owner": "apelekhs-organization",
     "runtimeVersion": {
       "policy": "appVersion"
     },
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "dc9a6fec-0dfd-4d41-91c6-cd2a614584db"
+        "projectId": "e6125f81-4eb7-4d27-9156-ea267448c7de"
       }
     }
   }
